# libdiscord

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TODO.md
docs/: DOMAIN.md  README.md
docs/decisions/: 001-agent-ready-documentation.md  002-event-loop-compatibility.md  003-testing-fuzzing-valgrind.md  004-dialectic-client-server-testing.md  006-core-library-as-plumbing-pdu-stack.md  007-documentation-and-manpage-updates.md  008-c-only-examples-and-codebase.md  009-consistent-protocol-interfaces.md  010-c-interfaces-and-language-bindings.md
examples/: discord_bot_example.c
include/: discord.h  discord_types.h
man/man3/: discord_create.3  discord_create_message.3  discord_gateway_connect.3  discord_gateway_process_heartbeat.3  discord_gateway_send_heartbeat.3  discord_gateway_send_identify.3  discord_gateway_send_resume.3  discord_gateway_state.3  discord_next_event.3  discord_types.3
src/: discord.c
tests/: fuzz_discord.c  test_discord_dialectic.c  test_discord_gateway_lifecycle.c  test_discord_smoke.c
